[web] Fix sidebar title cutoff in `ChatThreadList`
Summary:
Seems to be a regression, not sure when it was introduced exactly. This diff repositions the `ChatThreadListItemMenu` `.menuSidebar` `div` to be absolutely positioned so that it doesn't interfere with the `ChatThreadListSidebar`. What was happening before was the `ChatThreadListSidebar` was being covered by the `ChatThreadListItemMenu`. It probably went unnoticed since it wasn't tested with a sidebar message that was long enough to trigger the ellipsis overflow.

Before:

After:

Test Plan: Looks as expected on Chrome/Safari.

Reviewers: atul, ashoat

Subscribers: palys-swm, Adrian

Differential Revision: https://phab.comm.dev/D4284

--- a/web/chat/chat-thread-list-item-menu.css
+++ b/web/chat/chat-thread-list-item-menu.css
@@ -59,7 +59,9 @@ div.sidebar:hover .menu {
   background: var(--chat-thread-list-menu-active-bg);
 }
 .menuSidebar {
-  padding-right: 2px;
+  position: absolute;
+  top: 20%;
+  right: 0.5%;
 }
 
 button.menuContent {
